unpackaged/main/default/objects/ERS_Payment__c/ERS_Payment__c.object-meta.xml
<CustomObject>
    <label>ERS Payment</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERS Payments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>