unpackaged/main/default/objects/ERS_Payment__c/fields/Account_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_Text__c</fullName>
    <label>Account</label>
    <length>15</length>
    <type>Text</type>
</CustomField>