unpackaged/main/default/objects/ERS_Payment__c/fields/Adjusted_Payment__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Payment__c</fullName>
    <label>Adjusted Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>