unpackaged/main/default/objects/ERS_Payment__c/fields/Adjustment_Category__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Category__c</fullName>
    <formula>TEXT(Facility_Adjustment_Payment_ID__r.ACG_Adjustment_ID__r.ACG_Adjustment_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjustment Category</label>
    <type>Text</type>
</CustomField>