unpackaged/main/default/objects/ERS_Payment__c/fields/Advance_Charge_fees__c.field-meta.xml
<CustomField>
    <fullName>Advance_Charge_fees__c</fullName>
    <label>Advance Charge fees Admin Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>