unpackaged/main/default/objects/ERS_Payment__c/fields/Audit__c.field-meta.xml
<CustomField>
    <fullName>Audit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Audit</label>
    <type>Checkbox</type>
</CustomField>