unpackaged/main/default/objects/ERS_Payment__c/fields/Breakdown_2nd_Cross__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_2nd_Cross__c</fullName>
    <label>Breakdown 2nd Cross</label>
    <length>255</length>
    <type>Text</type>
</CustomField>