unpackaged/main/default/objects/ERS_Payment__c/fields/Breakdown_Cross__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Cross__c</fullName>
    <label>Breakdown Cross</label>
    <length>255</length>
    <type>Text</type>
</CustomField>