unpackaged/main/default/objects/ERS_Payment__c/fields/Breakdown_Land_Mark__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Land_Mark__c</fullName>
    <label>Breakdown Land Mark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>