unpackaged/main/default/objects/ERS_Payment__c/fields/Breakdown_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Longitude__c</fullName>
    <label>Breakdown Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>