unpackaged/main/default/objects/ERS_Payment__c/fields/Breakdown_Street__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Street__c</fullName>
    <label>Breakdown Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>