unpackaged/main/default/objects/ERS_Payment__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <length>15</length>
    <type>Text</type>
</CustomField>