unpackaged/main/default/objects/ERS_Payment__c/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accident Assist</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>RAP</fullName>
            </value>
            <value>
                <fullName>Tow To Go</fullName>
            </value>
            <value>
                <fullName>Dealership</fullName>
            </value>
            <value>
                <fullName>Motor Club</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>AAA Member - Technical Issue</fullName>
            </value>
            <value>
                <fullName>AAA PROMise</fullName>
            </value>
            <value>
                <fullName>CAA RAP</fullName>
            </value>
            <value>
                <fullName>Essential Workers</fullName>
            </value>
            <value>
                <fullName>Hospital Delivery</fullName>
            </value>
            <value>
                <fullName>RAP Manual</fullName>
            </value>
            <value>
                <fullName>Courtesy International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>