unpackaged/main/default/objects/ERS_Payment__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>ERS Payments</relationshipLabel>
    <relationshipName>ERS_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>