unpackaged/main/default/objects/ERS_Payment__c/fields/CDX_Authorization_Code__c.field-meta.xml
<CustomField>
    <fullName>CDX_Authorization_Code__c</fullName>
    <label>CDX Authorization Code</label>
    <length>17</length>
    <type>Text</type>
</CustomField>