unpackaged/main/default/objects/ERS_Payment__c/fields/CDX_Authorization_Level__c.field-meta.xml
<CustomField>
    <fullName>CDX_Authorization_Level__c</fullName>
    <label>CDX Authorization Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B</fullName>
                <label>Classic/Basic (B)</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Plus (P)</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Plus RV (R)</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Premier (E)</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Premier RV (V)</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>COD (C)</label>
            </value>
            <value>
                <fullName>X</fullName>
                <label>Call Club (X)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>