unpackaged/main/default/objects/ERS_Payment__c/fields/CDX_Member_Since__c.field-meta.xml
<CustomField>
    <fullName>CDX_Member_Since__c</fullName>
    <label>Member Since</label>
    <length>4</length>
    <type>Text</type>
</CustomField>