unpackaged/main/default/objects/ERS_Payment__c/fields/CDX_Membership_Level__c.field-meta.xml
<CustomField>
    <fullName>CDX_Membership_Level__c</fullName>
    <label>CDX Membership Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Plus</fullName>
            </value>
            <value>
                <fullName>Plus RV</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>Premier RV</fullName>
            </value>
            <value>
                <fullName>Classic</fullName>
                <isActive>false</isActive>
                <label>Classic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>