unpackaged/main/default/objects/ERS_Payment__c/fields/CDX_Motorcycle_Coverage__c.field-meta.xml
<CustomField>
    <fullName>CDX_Motorcycle_Coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CDX Motorcycle Coverage</label>
    <type>Checkbox</type>
</CustomField>