unpackaged/main/default/objects/ERS_Payment__c/fields/CDX_Type__c.field-meta.xml
<CustomField>
    <fullName>CDX_Type__c</fullName>
    <label>Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>