unpackaged/main/default/objects/ERS_Payment__c/fields/Clean_up_an_labour__c.field-meta.xml
<CustomField>
    <fullName>Clean_up_an_labour__c</fullName>
    <label>Clean up an labour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>