unpackaged/main/default/objects/ERS_Payment__c/fields/Comm_Center__c.field-meta.xml
<CustomField>
    <fullName>Comm_Center__c</fullName>
    <label>Comm Center</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FL</fullName>
            </value>
            <value>
                <fullName>GA</fullName>
            </value>
            <value>
                <fullName>IA</fullName>
            </value>
            <value>
                <fullName>IL</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>MI</fullName>
            </value>
            <value>
                <fullName>MN</fullName>
            </value>
            <value>
                <fullName>ND</fullName>
            </value>
            <value>
                <fullName>NE</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
            <value>
                <fullName>TN</fullName>
            </value>
            <value>
                <fullName>WI</fullName>
            </value>
            <value>
                <fullName>111</fullName>
            </value>
            <value>
                <fullName>006</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>