unpackaged/main/default/objects/ERS_Payment__c/fields/Cost_of_Plus_Service__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Plus_Service__c</fullName>
    <label>Cost of Plus Service</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>