unpackaged/main/default/objects/ERS_Payment__c/fields/Department_ID__c.field-meta.xml
<CustomField>
    <fullName>Department_ID__c</fullName>
    <label>Department ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>