unpackaged/main/default/objects/ERS_Payment__c/fields/Dispatch_Time__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Time__c</fullName>
    <label>Dispatch Time</label>
    <type>DateTime</type>
</CustomField>