unpackaged/main/default/objects/ERS_Payment__c/fields/Driver_Id__c.field-meta.xml
<CustomField>
    <fullName>Driver_Id__c</fullName>
    <label>Drvr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>