unpackaged/main/default/objects/ERS_Payment__c/fields/Enroute_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Enroute_Mileage__c</fullName>
    <label>Enroute Mileage</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>