unpackaged/main/default/objects/ERS_Payment__c/fields/Entitlement_Used__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Used__c</fullName>
    <label>Entitlement Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>