unpackaged/main/default/objects/ERS_Payment__c/fields/Entitlements_Allotted__c.field-meta.xml
<CustomField>
    <fullName>Entitlements_Allotted__c</fullName>
    <label>Entitlements Allotted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>