unpackaged/main/default/objects/ERS_Payment__c/fields/Entitlemnts_Alotted__c.field-meta.xml
<CustomField>
    <fullName>Entitlemnts_Alotted__c</fullName>
    <label>Entitlemnts Alotted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>