unpackaged/main/default/objects/ERS_Payment__c/fields/FA_1099__c.field-meta.xml
<CustomField>
    <fullName>FA_1099__c</fullName>
    <formula>Facility_Adjustment_Payment_ID__r.ACG_Adjustment_ID__r.ACG_Charge_1099__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1099</label>
    <type>Checkbox</type>
</CustomField>