unpackaged/main/default/objects/ERS_Payment__c/fields/FA_Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>FA_Adjustment_Type__c</fullName>
    <formula>TEXT(Facility_Adjustment_Payment_ID__r.ACG_Adjustment_ID__r.ACG_Adjustment_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjustment Type</label>
    <type>Text</type>
</CustomField>