unpackaged/main/default/objects/ERS_Payment__c/fields/FA_Facility_ID__c.field-meta.xml
<CustomField>
    <fullName>FA_Facility_ID__c</fullName>
    <formula>Facility_Adjustment_Payment_ID__r.ACG_Adjustment_ID__r.ACG_Facility_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility ID</label>
    <type>Text</type>
</CustomField>