unpackaged/main/default/objects/ERS_Payment__c/fields/FA_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>FA_Payment_Amount__c</fullName>
    <formula>Facility_Adjustment_Payment_ID__r.ACG_Payment_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>