unpackaged/main/default/objects/ERS_Payment__c/fields/FA_Status__c.field-meta.xml
<CustomField>
    <fullName>FA_Status__c</fullName>
    <formula>TEXT( Facility_Adjustment_Payment_ID__r.ACG_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>