unpackaged/main/default/objects/ERS_Payment__c/fields/Facility_Adjustment_Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>Facility_Adjustment_Payment_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility Adjustment Payment ID</label>
    <referenceTo>ACG_Facility_Adjustment_Payment__c</referenceTo>
    <relationshipLabel>ERS Payments</relationshipLabel>
    <relationshipName>ERS_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>