unpackaged/main/default/objects/ERS_Payment__c/fields/Facility_Adjustment_PaymentID__c.field-meta.xml
<CustomField>
    <fullName>Facility_Adjustment_PaymentID__c</fullName>
    <formula>Facility_Adjustment_Payment_ID__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility Adjustment Payment ID</label>
    <type>Text</type>
</CustomField>