unpackaged/main/default/objects/ERS_Payment__c/fields/Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>Facility_Name__c</fullName>
    <formula>IF(RecordType.Name = &quot;Facility Adjustment&quot;,HYPERLINK(&quot;/&quot;&amp;  Facility_Adjustment_Payment_ID__r.ACG_Adjustment_ID__r.Account__r.Id,  Facility_Adjustment_Payment_ID__r.ACG_Adjustment_ID__r.Account__r.Name),IF(RecordType.Name = &quot;Reimbursement Payment&quot;,HYPERLINK(&quot;/&quot;&amp;  Facility__r.Id,Facility__r.Name),&#39;&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility Name</label>
    <type>Text</type>
</CustomField>