unpackaged/main/default/objects/ERS_Payment__c/fields/Feedback_ID__c.field-meta.xml
<CustomField>
    <fullName>Feedback_ID__c</fullName>
    <label>Feedback ID</label>
    <length>55</length>
    <type>Text</type>
</CustomField>