unpackaged/main/default/objects/ERS_Payment__c/fields/Fleet__c.field-meta.xml
<CustomField>
    <fullName>Fleet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fleet</label>
    <type>Checkbox</type>
</CustomField>