unpackaged/main/default/objects/ERS_Payment__c/fields/Joined_AAA__c.field-meta.xml
<CustomField>
    <fullName>Joined_AAA__c</fullName>
    <label>Joined AAA</label>
    <type>Date</type>
</CustomField>