unpackaged/main/default/objects/ERS_Payment__c/fields/Legacy_Clear_Code__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Clear_Code__c</fullName>
    <label>Clr</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
            </value>
            <value>
                <fullName>MA</fullName>
            </value>
            <value>
                <fullName>G1</fullName>
            </value>
            <value>
                <fullName>MM</fullName>
            </value>
            <value>
                <fullName>XX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>