unpackaged/main/default/objects/ERS_Payment__c/fields/Long_Tow_Miles__c.field-meta.xml
<CustomField>
    <fullName>Long_Tow_Miles__c</fullName>
    <formula>IF(Tow_Mileage__c&gt;100,(Tow_Mileage__c-100),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Long Tow Miles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>