unpackaged/main/default/objects/ERS_Payment__c/fields/Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address__c</fullName>
    <formula>IF(Reimbursement_ID__r.ACG_Address_change__c,Reimbursement_ID__r.ACG_Address__c,(Reimbursement_ID__r.ACG_Member_Name__r.BillingStreet &amp; BR() &amp;Reimbursement_ID__r.ACG_Member_Name__r.BillingCity &amp; &quot;, &quot; &amp;Reimbursement_ID__r.ACG_Member_Name__r.BillingState &amp; &quot; &quot; &amp;Reimbursement_ID__r.ACG_Member_Name__r.BillingPostalCode &amp; BR() &amp;Reimbursement_ID__r.ACG_Member_Name__r.BillingCountry))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Address</label>
    <type>Text</type>
</CustomField>