unpackaged/main/default/objects/ERS_Payment__c/fields/Member_Club__c.field-meta.xml
<CustomField>
    <fullName>Member_Club__c</fullName>
    <formula>Member__r.Parent_Club_Name__c</formula>
    <label>Member Parent Club</label>
    <type>Text</type>
</CustomField>