unpackaged/main/default/objects/ERS_Payment__c/fields/Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Member_ID__c</fullName>
    <formula>Member__r.ACG_AAA_Membership__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member ID</label>
    <type>Text</type>
</CustomField>