unpackaged/main/default/objects/ERS_Payment__c/fields/Mileage__c.field-meta.xml
<CustomField>
    <fullName>Mileage__c</fullName>
    <label>Mileage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>