unpackaged/main/default/objects/ERS_Payment__c/fields/Next__c.field-meta.xml
<CustomField>
    <fullName>Next__c</fullName>
    <label>Next</label>
    <length>255</length>
    <type>Text</type>
</CustomField>