unpackaged/main/default/objects/ERS_Payment__c/fields/OD_Mileage__c.field-meta.xml
<CustomField>
    <fullName>OD_Mileage__c</fullName>
    <label>OD Mileage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>