unpackaged/main/default/objects/ERS_Payment__c/fields/Old_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Old_Mileage__c</fullName>
    <label>Old Mileage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>