unpackaged/main/default/objects/ERS_Payment__c/fields/Original_Tow_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Tow_Amount__c</fullName>
    <label>Original Tow Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>