unpackaged/main/default/objects/ERS_Payment__c/fields/Out_of_Network__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Network__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Out of Network</label>
    <type>Checkbox</type>
</CustomField>