unpackaged/main/default/objects/ERS_Payment__c/fields/Parent_Club__c.field-meta.xml
<CustomField>
    <fullName>Parent_Club__c</fullName>
    <formula>Facility__r.ERS_Club__c</formula>
    <label>Facility Parent Club</label>
    <type>Text</type>
</CustomField>