unpackaged/main/default/objects/ERS_Payment__c/fields/Payment_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Processed_Date__c</fullName>
    <label>Payment Processed Date</label>
    <type>Date</type>
</CustomField>