unpackaged/main/default/objects/ERS_Payment__c/fields/PCC1__c.field-meta.xml
<CustomField>
    <fullName>PCC1__c</fullName>
    <label>PCC1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>