unpackaged/main/default/objects/ERS_Payment__c/fields/Pgm__c.field-meta.xml
<CustomField>
    <fullName>Pgm__c</fullName>
    <label>Pgm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>