unpackaged/main/default/objects/ERS_Payment__c/fields/Previous__c.field-meta.xml
<CustomField>
    <fullName>Previous__c</fullName>
    <label>Prev</label>
    <length>255</length>
    <type>Text</type>
</CustomField>