unpackaged/main/default/objects/ERS_Payment__c/fields/RAP_Call__c.field-meta.xml
<CustomField>
    <fullName>RAP_Call__c</fullName>
    <label>Call #</label>
    <length>8</length>
    <type>Text</type>
</CustomField>