unpackaged/main/default/objects/ERS_Payment__c/fields/RBP_Exception__c.field-meta.xml
<CustomField>
    <fullName>RBP_Exception__c</fullName>
    <label>RBP Exception</label>
    <length>255</length>
    <type>Text</type>
</CustomField>