unpackaged/main/default/objects/ERS_Payment__c/fields/Reciprocal__c.field-meta.xml
<CustomField>
    <fullName>Reciprocal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reciprocal</label>
    <type>Checkbox</type>
</CustomField>