unpackaged/main/default/objects/ERS_Payment__c/fields/Reciprocal_Payment__c.field-meta.xml
<CustomField>
    <fullName>Reciprocal_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reciprocal Payment</label>
    <type>Checkbox</type>
</CustomField>